--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": "^8.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^3.0"
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.10",
+        "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
